--- a/styles.css
+++ b/styles.css
@@ -62,18 +62,93 @@ transition: color 0.5s;
 }
 
 
-/* meme*/
-
-.meme img{
-    position: absolute;
+/* home */
+.welcome {
     display: block;
-    margin-left:auto;
+    margin-left: auto;
     margin-right: auto;
+    margin-top: 200px;
+    
+  
+}
+.welcome-text{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Arial;
+    font-size: 35px;
+}
+.welcome img{
+    height: 300px;
+    width:  500px;
+}
+
+
+/* portfolio */
+
+.portfolio-items-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
+
+.portfolio-item-wrapper{
+    position: relative;
+}
+
+.portfolio-img-background{
+ height: 570px;
+ width: 100%;
+ background-size:cover ;
+ background-position: center;
+ background-repeat: no-repeat;
+}
+
+.img-text-wrapper{
+    position:absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    padding-left: 45%;
    
-    height: 500px;
-    width:    500px;
-    position: center center;
-    object-position: center center;
-    opacity: 1;
-    transition: opacity 500ms ease 0s;
+}
+
+.logo-wrapper img{
+    width: 50%;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.img-text-wrapper .subtitle{
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+  
+    text-transform: uppercase;
+color: white;
+
+}
+.img-text-wrapper .subtitle a{
+    font-weight: 600;
+    text-decoration: none;
+    color: white;
+    }
+
+.img-text-wrapper:hover .subtitle{
+    font-weight: 600;
+    color:yellow;
+}
+.img-text-wrapper:hover .subtitle a{
+    font-weight: 600;
+    text-decoration: none;
+    color:yellow;
+}
+
+.img-darken{
+    transition: 1s;
+    filter: brightness(10%);
 }
